--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "nconf": "^0.10.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "uuid": "^3.3.2",
     "validate.js": "^0.13.1"
   },
