--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
-MONGODB_URL=mongodb://localhost:27017/my_app_dev
 PORT=3000
-JWT_SECRET=kdfjkjdghiauhdf
+
+NODE_ENV=development
+
+DB_DEV=mongodb://localhost:27017/testt-dev
+DB_TEST=mongodb://localhost:27017/testt-test
+DB=mongodb://localhost:27017/testt
